fixed copyable/invisible icon text with proper CSS

--- a/less/icons.less
+++ b/less/icons.less
@@ -175,3 +175,7 @@
     color: #780098;
   }
 }
+
+.hidetext {
+  font-size:0;
+}
